--- a/src/components/text-area/text-area-material-like/text-area-material-like.scss
+++ b/src/components/text-area/text-area-material-like/text-area-material-like.scss
@@ -174,7 +174,7 @@ $variants: "dark", "light";
        ************************************************************************/
       #{$block}__error {
         color: $textAreaErrorColor;
-        margin: 5px $textAreaPaddingX;
+        margin: 5px 0;
 
         a {
           color: $textAreaErrorColor;
